--- a/app.json
+++ b/app.json
@@ -63,7 +63,7 @@
   "buildpacks": [{
     "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest"
   }, {
-    "url": "https://github.com/amivin/aria2-heroku"
+    "url": "https://github.com/akshaychinnan/aria2-heroku"
   }, {
     "url": "heroku/python"
   }],
