--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,6 @@ aiohttp
 aria2p
 hachoir
 Pillow
-https://github.com/pyrogram/pyrogram/archive/asyncio-dev.zip
+https://github.com/pyrogram/pyrogram/archive/asyncio.zip
 tgcrypto
-git
+git+https://github.com/FaArIsH/youtube-dl
