--- a/app.json
+++ b/app.json
@@ -17,6 +17,7 @@
   "repository": "https://github.com/SpEcHiDe/PublicLeech",
   "success_url": "https://telegram.dog/ThankTelegram",
   "website": "https://github.com/SpEcHiDe/PublicLeech",
+  "logo": "https://telegra.ph/file/8b973b270f4f380a427b1.png",
   "env": {
     "ENV": {
       "description": "Setting this to ANYTHING will enable webhooks when in env mode",
@@ -76,6 +77,7 @@
   },
   "addons": [
   ],
+  "stack": "heroku-18",
   "buildpacks": [{
     "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest"
   }, {
