--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,6 @@ aiohttp
 aria2p
 hachoir
 Pillow
-https://github.com/pyrogram/pyrogram/archive/asyncio-dev.zip
+git+git://github.com/pyrogram/pyrogram@asyncio-dev#pyrogram
 tgcrypto
-git+git://github.com/lzzy12/youtube-dl@d7c2b43#youtube_dl
-
+git+git://github.com/sudoshell/youtube-dl@73400cc#youtube_dl
