--- a/sample_config.env
+++ b/sample_config.env
@@ -1,37 +1,22 @@
-#!/usr/bin/env python3
-#  -*- coding: utf-8 -*-
+#!/bin/bash
+#
 #  Copyright (C) 2020 PublicLeech Authors
-
 #  This program is free software: you can redistribute it and/or modify
 #  it under the terms of the GNU Affero General Public License as published by
 #  the Free Software Foundation, either version 3 of the License, or
 #  (at your option) any later version.
-
 #  This program is distributed in the hope that it will be useful,
 #  but WITHOUT ANY WARRANTY; without even the implied warranty of
 #  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 #  GNU Affero General Public License for more details.
-
 #  You should have received a copy of the GNU Affero General Public License
 #  along with this program.  If not, see <https://www.gnu.org/licenses/>.
+#
+# All rights reserved.
 
-# the logging things
-import logging
-logging.basicConfig(
-    level=logging.DEBUG,
-    format="%(asctime)s - %(name)s - %(levelname)s - %(message)s"
-)
-logging.getLogger("pyrogram").setLevel(logging.WARNING)
-LOGGER = logging.getLogger(__name__)
+APP_ID=6
+API_HASH=eb06d4abfb49dc3eeb1aeb98ae0f581e
+TG_BOT_TOKEN=1234567:tujnbscpnzcqdfkfnchbhithyofczznbgpw
+AUTH_CHANNEL=-100123456789 7351948
+SUDO_USERS=7351948
 
-import os
-import re
-
-
-MAGNETIC_LINK_REGEX = r"magnet\:\?xt\=urn\:btih\:([A-F\d]+)"
-
-
-def extract_info_hash_from_ml(magnetic_link):
-    ml_re_match = re.search(MAGNETIC_LINK_REGEX, magnetic_link)
-    if ml_re_match is not None:
-        return ml_re_match.group(1)
