--- a/sample_config.env
+++ b/sample_config.env
@@ -14,9 +14,34 @@
 #
 # All rights reserved.
 
-APP_ID=6
-API_HASH=eb06d4abfb49dc3eeb1aeb98ae0f581e
-TG_BOT_TOKEN=1234567:tujnbscpnzcqdfkfnchbhithyofczznbgpw
-AUTH_CHANNEL=-100123456789 7351948
-SUDO_USERS=7351948
+# Please read the README to understand each variable values.
 
+# ----------- REQUIRED ----------- #
+
+# TG_BOT_TOKEN=1234567:tujnbscpnzcqdfkfnchbhithyofczznbgpw
+# APP_ID=6
+# API_HASH=eb06d4abfb49dc3eeb1aeb98ae0f581e
+# AUTH_CHANNEL=-100123456789 7351948
+
+# ----------- OPTIONAL ----------- #
+
+# SHOULD_USE_BUTTONS=False
+# ARIA_TWO_STARTED_PORT=6800
+# EDIT_SLEEP_TIME_OUT=1
+# MAX_TIME_TO_WAIT_FOR_TORRENTS_TO_START=600
+# FINISHED_PROGRESS_STR=█
+# UN_FINISHED_PROGRESS_STR=░
+# R_CLONE_CONF_URI=
+# R_CLONE_DEST=
+# DOWNLOAD_LOCATION=
+# MAX_FILE_SIZE=50000000
+# TG_MAX_FILE_SIZE=2097152000
+# FREE_USER_MAX_FILE_SIZE=50000000
+# MAX_TG_SPLIT_FILE_SIZE=1900000000
+# MAX_MESSAGE_LENGTH=4096
+# PROCESS_MAX_TIMEOUT=3600
+# SP_LIT_ALGO_RITH_M=
+# TG_OFFENSIVE_API=
+# CHUNK_SIZE=
+# DIS_ABLE_ST_GFC_COMMAND_I=
+# SUDO_USERS=7351948
